--- a/STCA_App/STCA_App.csproj
+++ b/STCA_App/STCA_App.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\STCA_DataLayer\STCA_DataLayer.csproj" />
+    <ProjectReference Include="..\STCA_ServiceLayer\STCA_ServiceLayer.csproj" />
+  </ItemGroup>
+
 </Project>
