--- a/STCA_App/STCA_App.csproj
+++ b/STCA_App/STCA_App.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\STCA_DataLayer\STCA_DataLayer.csproj" />
     <ProjectReference Include="..\STCA_ServiceLayer\STCA_ServiceLayer.csproj" />
   </ItemGroup>
