--- a/STCA_ServiceLayer/STCA_ServiceLayer.csproj
+++ b/STCA_ServiceLayer/STCA_ServiceLayer.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\STCA_DataLayer\STCA_DataLayer.csproj" />
+    <ProjectReference Include="..\STCA_Tool\STCA_Tool.csproj" />
   </ItemGroup>
 
 </Project>
